--- a/src/app/components/template/template.component.html
+++ b/src/app/components/template/template.component.html
@@ -70,6 +70,90 @@
     </div>
   </div>
 
+
+
+  <div class="form-group row">
+    <label class="col-2 col-form-label">Pais</label>
+    <div class="col-md-8">
+      <select class="form-control" [(ngModel)]="usuario.pais" name="pais">
+        <option value="">Selecciona un pais</option>
+        <option value="{{pais.codigo}}" *ngFor="let pais of paises">{{pais.nombre}}</option>
+      </select>
+    </div>
+  </div>
+
+
+  <!--div class="form-group row">
+    <label class="col-2 col-form-label">Sexo</label>
+    <div class="col-md-8">
+
+      <div class="custom-control custom-radio custom-control-inline">
+        <input type="radio" 
+                id="sexo0" 
+                class="custom-control-input" 
+                [(ngModel)]="usuario.sexo"  
+                name="sexo" 
+                value="Hombre">
+
+        <label class="custom-control-label" for="sexo0">Hombre</label>
+      </div>
+      <div class="custom-control custom-radio custom-control-inline">
+        <input type="radio" 
+                id="sexo1" 
+                class="custom-control-input" 
+                [(ngModel)]="usuario.sexo"  
+                name="sexo" 
+                value="Mujer">
+
+        <label class="custom-control-label" for="sexo1">Mujer</label>
+      </div>
+
+    </div>
+  </div-->
+
+  <br>
+
+
+  <!-- **************************** Select DINAMICO ********************************************************* -->
+
+  <h4>Select dinamico</h4>
+  <hr>
+
+  <div class="form-group row">
+    <label class="col-2 col-form-label">Sexo</label>
+    <div class="col-md-8">
+
+      <div class="custom-control custom-radio custom-control-inline" *ngFor="let s of sexos; let i = index">
+        <input type="radio" 
+                id="sexo{{i}}" 
+                class="custom-control-input" 
+                [(ngModel)]="usuario.sexo"  
+                name="sexo" 
+                [value]="s">
+
+        <label class="custom-control-label" for="sexo{{i}}">{{s}}</label>
+      </div>
+
+    </div>
+  </div>
+  <!-- ************************************** TERMINA Select DINAMICO **************************************** -->
+
+  <br><br><br>
+
+
+  <div class="form-group row">
+    <label class="col-2 col-form-label">Acepta</label>
+    <div class="col-md-8">
+
+      <div class="custom-control custom-checkbox">
+        <input type="checkbox" class="custom-control-input" id="customCheck1" [(ngModel)]="usuario.acepta" name="acepta" required>
+        <label class="custom-control-label" for="customCheck1">Acepta las condiciones</label>
+      </div>
+
+    </div>
+  </div>
+
+
   <div class="form-group row">
     <label class="col-2 col-form-label">&nbsp;</label>
     <div class="input-group col-md-8">
@@ -82,3 +166,10 @@
   </div>
 
 </form>
+
+
+<br>
+
+<pre>
+  {{usuario | json}}
+</pre>
