--- a/src/app/components/data/data.component.html
+++ b/src/app/components/data/data.component.html
@@ -1,6 +1,6 @@
 <h4>Formularios <small>data</small></h4>
 <hr>
-<form>
+<form  [formGroup]="forma" (ngSubmit)="guardarCambios()">
 
   <div>
 
@@ -9,8 +9,18 @@
       <div class="col-8">
 
         <input class="form-control"
+              [ngClass]="{'is-invalid': forma.get('nombre').invalid}"
                type="text"
-               placeholder="Nombre">
+               placeholder="Nombre"
+               formControlName="nombre">
+
+        <div *ngIf="forma.controls['nombre'].errors?.required" class="invalid-feedback">
+          El nombre es necesario
+        </div>
+        <div *ngIf="forma.controls['nombre'].errors?.minlength" class="invalid-feedback">
+          Por lo menos 3 caracteres
+        </div>
+
       </div>
     </div>
 
@@ -20,7 +30,8 @@
 
         <input class="form-control"
                type="text"
-               placeholder="Apellido">
+               placeholder="Apellido"
+               formControlName="apellido">
       </div>
     </div>
 
@@ -32,7 +43,8 @@
 
       <input class="form-control"
              type="email"
-             placeholder="Correo electrónico">
+             placeholder="Correo electrónico"
+             formControlName="correo">
     </div>
   </div>
 
@@ -46,5 +58,8 @@
       </button>
     </div>
   </div>
+
+
+  {{forma.valid}}
 
 </form>
