DataComponent-formGroupName-Added

--- a/src/app/components/data/data.component.html
+++ b/src/app/components/data/data.component.html
@@ -2,22 +2,23 @@
 <hr>
 <form  [formGroup]="forma" (ngSubmit)="guardarCambios()">
 
-  <div>
+  <div formGroupName="nombreCompleto">
 
     <div class="form-group row">
       <label class="col-2 col-form-label">Nombre</label>
       <div class="col-8">
 
+        <!---->
         <input class="form-control"
-              [ngClass]="{'is-invalid': forma.get('nombre').invalid}"
+              [ngClass]="{'is-invalid': forma.controls['nombreCompleto'].controls['nombre'].invalid}"
                type="text"
                placeholder="Nombre"
                formControlName="nombre">
 
-        <div *ngIf="forma.controls['nombre'].errors?.required" class="invalid-feedback">
+        <div *ngIf="forma.get('nombreCompleto.nombre').errors?.required" class="invalid-feedback">
           El nombre es necesario
         </div>
-        <div *ngIf="forma.controls['nombre'].errors?.minlength" class="invalid-feedback">
+        <div *ngIf="forma.get('nombreCompleto.nombre').errors?.minlength" class="invalid-feedback">
           Por lo menos 3 caracteres
         </div>
 
