--- a/src/app/components/data/data.component.html
+++ b/src/app/components/data/data.component.html
@@ -40,7 +40,7 @@
 
   <div class="form-group row">
     <label class="col-2 col-form-label">Correo</label>
-    <div class="col-md-8">
+    <div class="col-8">
 
       <input class="form-control"
              type="email"
@@ -53,9 +53,16 @@
 
   <div class="form-group row">
     <label class="col-2 col-form-label">&nbsp;</label>
-    <div class="input-group col-md-8">
+    <div class="input-group col-md-4">
       <button type="submit" class="btn btn-outline-primary">
         Guardar
+      </button>
+    </div>
+
+    <label class="col-2 col-form-label">&nbsp;</label>
+    <div class="input-group col-md-4">
+      <button class="btn btn-outline-danger" (click)="reset()">
+        Reset
       </button>
     </div>
   </div>
