--- a/src/app/components/data/data.component.html
+++ b/src/app/components/data/data.component.html
@@ -50,6 +50,25 @@
   </div>
 
 
+  <div class="form-group row">
+    <label class="col-2 col-form-label">Pasatiempos</label>
+
+    <div class="col-8" formArrayName="pasatiempos">
+
+      <input *ngFor="let pasatiempo of forma.controls['pasatiempos'].controls; let i = index" 
+              [formControlName]="i" 
+              class="form-control" 
+              type="text">
+
+    </div>
+
+    <button type="button" class="btn btn-primary" (click)="agregarPasatiempo()">
+      Nuevo
+    </button>
+
+  </div>
+
+
 
   <div class="form-group row">
     <label class="col-2 col-form-label">&nbsp;</label>
