--- a/src/app/components/data/data.component.html
+++ b/src/app/components/data/data.component.html
@@ -51,6 +51,30 @@
 
 
   <div class="form-group row">
+    <label class="col-2 col-form-label">Password</label>
+    <div class="col-8">
+
+      <input class="form-control"
+             type="password"
+             placeholder="Password"
+             formControlName="password1">
+    </div>
+  </div>
+
+  <div class="form-group row">
+    <label class="col-2 col-form-label">Repetir password</label>
+    <div class="col-8">
+
+      <input class="form-control"
+             type="password"
+             placeholder="Repetir password"
+             formControlName="password2">
+    </div>
+  </div>
+
+
+
+  <div class="form-group row">
     <label class="col-2 col-form-label">Pasatiempos</label>
 
     <div class="col-8" formArrayName="pasatiempos">
