--- a/src/app/components/data/data.component.html
+++ b/src/app/components/data/data.component.html
@@ -51,6 +51,18 @@
 
 
   <div class="form-group row">
+    <label class="col-2 col-form-label">Usuario</label>
+    <div class="col-8">
+
+      <input class="form-control"
+             type="text"
+             placeholder="Usuario"
+             formControlName="username">
+    </div>
+  </div>
+
+
+  <div class="form-group row">
     <label class="col-2 col-form-label">Password</label>
     <div class="col-8">
 
@@ -112,5 +124,6 @@
 
 
   {{forma.valid}}
-
+  <br>
+  {{forma.status}}
 </form>
